--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;1,200;1,300;1,500&display=swap');
+
+@layer base {
+  @font-face {
+    font-family: "Poppins";
+    src: url('https://fonts.googleapis.com/css2?family=Poppins:wght@0,200&display=swap');
+
+    * {
+      padding: 0;
+      left: 0;
+      box-sizing: border-box;
+      font-family: "Poppins";
+    }
+  }
+}
